--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "url": "git+https://github.com/katesowles/SwipeSecretApp.git"
   },
   "author": {
-    "developer" : "Charles Emrich <emrich.charles@gmail.com>",
-    "developer" : "Danielle Heberling <daheber@gmail.com>",
-    "developer" : "Kate Sowles <katesowles@gmail.com>"
+    "developer": "Kate Sowles <katesowles@gmail.com>"
   },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/katesowles/SwipeSecretApp/issues"
   },
-  "homepage": "https://github.com/katesowles/SwipeSecretApp#readme"
+  "homepage": "https://github.com/katesowles/SwipeSecretApp#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.1",
+    "nodemon": "^1.10.0"
+  }
 }
