--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   "homepage": "https://github.com/katesowles/SwipeSecretApp#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "mocha": "^3.0.1",
     "nodemon": "^1.10.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "mongoose": "^4.5.8"
   }
 }
