--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "swipesecret",
   "version": "1.0.0",
   "description": "It's like Tinder, but for matching people based on their mutual appreciation of each others' secrets.",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "mocha",
-    "start": "npm start"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
