adding password field to user contacts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "url": "git+https://github.com/katesowles/SwipeSecretApp.git"
   },
   "author": {
-    "developer": "Kate Sowles <katesowles@gmail.com>"
+    "developer": "Danielle Heberling <daheber@gmail.com>",
+    "developer": "Kate Sowles <katesowles@gmail.com>",
+    "developer": "Charles Emrich <charles.emrich@gmail.com>"
   },
   "license": "MIT",
   "bugs": {
