--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "url": "git+https://github.com/katesowles/SwipeSecretApp.git"
   },
   "author": {
-    "developer": "Danielle Heberling <daheber@gmail.com>",
-    "developer": "Kate Sowles <katesowles@gmail.com>",
     "developer": "Charles Emrich <charles.emrich@gmail.com>"
   },
   "license": "MIT",
@@ -28,6 +26,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "json-schema-faker": "^0.3.6",
     "mocha": "^3.0.1",
     "nodemon": "^1.10.0"
   },
