--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "nodemon": "^1.10.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8"
   }
 }
