--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jquery": "^3.1.0",
+    "jquery-touchswipe": "^1.6.15",
     "mongoose": "^4.5.8"
   }
 }
