--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.1.0",
     "jquery-touchswipe": "^1.6.15",
     "jsonwebtoken": "^7.1.7",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "morgan": "^1.7.0"
   }
 }
