--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
     "jquery-touchswipe": "^1.6.15",
     "jsonwebtoken": "^7.1.7",
