--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
-    "json-schema-faker": "^0.3.6",
+    "json-schema-faker": "^0.3.6"
   }
 }
